--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Crypto Empire | إمبراطورية الكريبتو</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;900&family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
     <style>
@@ -13,127 +13,73 @@
             --dark-bg: #050505;
         }
 
-        body {
-            margin: 0;
-            padding: 0;
+        body, html {
+            margin: 0; padding: 0;
             background-color: var(--dark-bg);
             color: white;
-            font-family: 'Tajawal', 'Orbitron', sans-serif;
-            overflow-x: hidden;
-            transition: all 0.3s ease;
+            font-family: 'Tajawal', sans-serif;
+            height: 100%; overflow: hidden;
         }
 
-        /* حاوية الموقع الرئيسية - تدعم جميع الأجهزة */
         .app-container {
-            display: flex;
-            flex-direction: column;
-            min-height: 100vh;
-            padding: 20px;
-            box-sizing: border-box;
+            display: flex; flex-direction: column;
+            height: 100vh; padding: 15px; box-sizing: border-box;
         }
 
-        /* الهيدر والمبدل اللغوي */
         header {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
+            display: flex; justify-content: space-between; align-items: center;
             border-bottom: 2px solid var(--neon-blue);
-            padding-bottom: 10px;
-            box-shadow: 0 0 15px var(--neon-blue);
+            padding: 10px; box-shadow: 0 0 15px var(--neon-blue);
+            z-index: 10;
         }
 
         .logo {
-            font-family: 'Orbitron', sans-serif;
-            font-size: 1.5rem;
-            text-transform: uppercase;
-            letter-spacing: 2px;
-            color: var(--neon-blue);
-            text-shadow: 0 0 10px var(--neon-blue);
+            font-family: 'Orbitron', sans-serif; font-size: 1.2rem;
+            color: var(--neon-blue); text-shadow: 0 0 10px var(--neon-blue);
         }
 
         .lang-switch button {
-            background: transparent;
-            border: 1px solid var(--neon-green);
-            color: var(--neon-green);
-            padding: 5px 15px;
-            cursor: pointer;
-            font-family: inherit;
-            border-radius: 5px;
-            font-weight: bold;
+            background: rgba(0, 255, 136, 0.1); border: 1px solid var(--neon-green);
+            color: var(--neon-green); padding: 5px 12px; cursor: pointer;
+            border-radius: 5px; font-weight: bold; font-size: 0.8rem;
         }
 
-        /* منطقة اللعبة المركزية */
         .game-world {
-            flex-grow: 1;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            text-align: center;
-            margin-top: 40px;
-            border: 2px solid #1a1a1a;
-            border-radius: 30px;
-            background: radial-gradient(circle, #111 0%, #000 100%);
-            box-shadow: inset 0 0 50px #000;
-            position: relative;
+            flex-grow: 1; display: flex; justify-content: center; align-items: center;
+            text-align: center; margin: 20px 0; border: 1px solid #1a1a1a;
+            border-radius: 20px; background: radial-gradient(circle, #0a0a0a 0%, #000 100%);
+            box-shadow: inset 0 0 30px #000;
         }
 
         .hero-text h1 {
-            font-size: 3rem;
-            margin-bottom: 15px;
-            text-shadow: 0 0 20px var(--neon-green);
-            animation: pulse 2s infinite;
+            font-size: 2.2rem; margin-bottom: 10px;
+            text-shadow: 0 0 15px var(--neon-green);
         }
 
-        @keyframes pulse {
-            0% { opacity: 1; }
-            50% { opacity: 0.8; }
-            100% { opacity: 1; }
-        }
-
-        /* أزرار الأكشن المستقبلي */
         .main-btn {
-            background: var(--neon-green);
-            color: black;
-            border: none;
-            padding: 18px 45px;
-            font-size: 1.3rem;
-            font-weight: bold;
-            border-radius: 50px;
-            cursor: pointer;
-            box-shadow: 0 0 25px var(--neon-green);
-            transition: 0.3s;
-            margin-top: 20px;
+            background: var(--neon-green); color: black; border: none;
+            padding: 15px 35px; font-size: 1.1rem; font-weight: bold;
+            border-radius: 50px; box-shadow: 0 0 20px var(--neon-green);
+            cursor: pointer; margin-top: 15px;
         }
 
-        .main-btn:hover {
-            transform: scale(1.05);
-            box-shadow: 0 0 40px var(--neon-green);
-        }
-
-        /* شريط العملات المباشر (القلب النابض) */
+        /* --- تعديل شريط الأسعار ليناسب التصميم الجوال --- */
         .ticker-wrap {
-            width: 100%;
-            overflow: hidden;
-            background: rgba(0,0,0,0.8);
-            padding: 15px 0;
-            margin-top: 20px;
-            border-top: 1px solid #333;
+            position: fixed; bottom: 0; left: 0; width: 100%;
+            background: rgba(0, 0, 0, 0.9);
+            border-top: 1px solid #222; padding: 12px 0;
+            z-index: 100; backdrop-filter: blur(5px);
         }
 
         .ticker {
-            display: flex;
-            white-space: nowrap;
-            animation: marquee 25s linear infinite;
+            display: flex; white-space: nowrap;
+            animation: marquee 20s linear infinite;
         }
 
         .ticker-item {
-            margin: 0 30px;
-            font-family: 'Orbitron', sans-serif;
-            font-weight: bold;
-            font-size: 1.1rem;
-            display: flex;
-            align-items: center;
-            gap: 10px;
+            display: inline-flex; align-items: center;
+            margin: 0 25px; font-family: 'Orbitron', sans-serif;
+            font-size: 0.9rem; font-weight: bold; letter-spacing: 1px;
         }
 
         @keyframes marquee {
@@ -141,12 +87,9 @@
             100% { transform: translateX(-100%); }
         }
 
-        /* استجابة للهواتف المحمولة */
         @media (max-width: 600px) {
-            .hero-text h1 { font-size: 1.8rem; }
-            .logo { font-size: 1rem; }
-            .main-btn { padding: 12px 30px; font-size: 1rem; }
-            header { flex-direction: row; }
+            .hero-text h1 { font-size: 1.6rem; }
+            .logo { font-size: 0.9rem; }
         }
     </style>
 </head>
@@ -154,86 +97,70 @@
 
     <div class="app-container">
         <header>
-            <div class="logo" id="logoText">Crypto Empire</div>
+            <div class="logo" id="logoText">CRYPTO EMPIRE</div>
             <div class="lang-switch">
-                <button onclick="toggleLang()">English / عربي</button>
+                <button onclick="toggleLang()">EN / عربي</button>
             </div>
         </header>
 
         <main class="game-world">
             <div class="hero-text">
                 <h1 id="mainTitle">ابنِ إمبراطوريتك الرقمية</h1>
-                <p id="subTitle" style="color: #888;">حوّل تحركات السوق إلى قوة وسيطرة</p>
+                <p id="subTitle" style="color: #666; font-size: 0.9rem;">حوّل تحركات السوق إلى قوة وسيطرة</p>
                 <button class="main-btn" id="startBtn">ابدأ الغزو الآن</button>
             </div>
         </main>
 
         <div class="ticker-wrap">
-            <div class="ticker" id="ticker-content">
-                <span class="ticker-item" id="btc-price">BTC: $...</span>
-                <span class="ticker-item" id="eth-price">ETH: $...</span>
-                <span class="ticker-item" id="sol-price">SOL: $...</span>
-                <span class="ticker-item" id="bnb-price">BNB: $...</span>
+            <div class="ticker" id="ticker-box">
+                <span class="ticker-item" id="BTC-val" style="color: var(--neon-blue);">BTC: $...</span>
+                <span class="ticker-item" id="ETH-val" style="color: var(--neon-blue);">ETH: $...</span>
+                <span class="ticker-item" id="SOL-val" style="color: var(--neon-blue);">SOL: $...</span>
+                <span class="ticker-item" id="BNB-val" style="color: var(--neon-blue);">BNB: $...</span>
             </div>
         </div>
     </div>
 
     <script>
-        // 1. نظام تبديل اللغات
+        // نظام اللغة
         let currentLang = 'ar';
         const content = {
-            ar: {
-                title: "ابنِ إمبراطوريتك الرقمية",
-                sub: "حوّل تحركات السوق إلى قوة وسيطرة",
-                btn: "ابدأ الغزو الآن",
-                dir: "rtl"
-            },
-            en: {
-                title: "Build Your Crypto Empire",
-                sub: "Turn market moves into power and dominance",
-                btn: "Start the Conquest",
-                dir: "ltr"
-            }
+            ar: { title: "ابنِ إمبراطوريتك الرقمية", sub: "حوّل تحركات السوق إلى قوة وسيطرة", btn: "ابدأ الغزو الآن", dir: "rtl" },
+            en: { title: "Build Your Crypto Empire", sub: "Turn market moves into power", btn: "Start Conquest", dir: "ltr" }
         };
 
         function toggleLang() {
             currentLang = (currentLang === 'ar') ? 'en' : 'ar';
-            document.documentElement.lang = currentLang;
             document.documentElement.dir = content[currentLang].dir;
             document.getElementById('mainTitle').innerText = content[currentLang].title;
             document.getElementById('subTitle').innerText = content[currentLang].sub;
             document.getElementById('startBtn').innerText = content[currentLang].btn;
         }
 
-        // 2. ربط بيانات السوق الحية (Binance WebSocket)
-        const symbols = ['btcusdt', 'ethusdt', 'solusdt', 'bnbusdt'];
-        const socketUrl = `wss://stream.binance.com:9443/ws/${symbols.map(s => s + '@ticker').join('/')}`;
-        const binanceSocket = new WebSocket(socketUrl);
+        // --- الربط المباشر والآمن بالأسعار ---
+        function startPrices() {
+            const streams = ['btcusdt', 'ethusdt', 'solusdt', 'bnbusdt'];
+            const socket = new WebSocket(`wss://stream.binance.com:9443/ws/${streams.map(s => s + '@ticker').join('/')}`);
 
-        binanceSocket.onmessage = (event) => {
-            const data = JSON.parse(event.data);
-            const symbol = data.s; // الرمز (مثلاً BTCUSDT)
-            const price = parseFloat(data.c).toFixed(2); // السعر الحالي
-            const change = parseFloat(data.P).toFixed(2); // نسبة التغير 24 ساعة
+            socket.onmessage = (event) => {
+                const data = JSON.parse(event.data);
+                const coin = data.s.replace('USDT', '');
+                const price = parseFloat(data.c).toLocaleString(undefined, {minimumFractionDigits: 2});
+                const change = parseFloat(data.P).toFixed(2);
+                
+                const el = document.getElementById(`${coin}-val`);
+                if (el) {
+                    const color = change >= 0 ? 'var(--neon-green)' : 'var(--neon-red)';
+                    const icon = change >= 0 ? '▲' : '▼';
+                    el.style.color = color;
+                    el.innerHTML = `${coin}: $${price} <span style="font-size: 0.7rem; margin-left:5px;">${icon} ${change}%</span>`;
+                }
+            };
 
-            if (symbol === "BTCUSDT") updateUI("btc-price", "BTC", price, change);
-            if (symbol === "ETHUSDT") updateUI("eth-price", "ETH", price, change);
-            if (symbol === "SOLUSDT") updateUI("sol-price", "SOL", price, change);
-            if (symbol === "BNBUSDT") updateUI("bnb-price", "BNB", price, change);
-        };
-
-        function updateUI(id, label, price, change) {
-            const el = document.getElementById(id);
-            if (el) {
-                const icon = change >= 0 ? "▲" : "▼";
-                const color = change >= 0 ? "var(--neon-green)" : "var(--neon-red)";
-                el.innerHTML = `${label}: $${price} <span style="font-size: 0.8rem; margin-left:5px;">${icon} ${change}%</span>`;
-                el.style.color = color;
-                el.style.textShadow = `0 0 10px ${color}`;
-            }
+            socket.onclose = () => setTimeout(startPrices, 3000); // إعادة اتصال تلقائي في حال الانقطاع
         }
 
-        binanceSocket.onerror = (err) => console.error("خطأ في الاتصال بالبيانات:", err);
+        startPrices();
     </script>
 </body>
 </html>
