--- a/index.html
+++ b/index.html
@@ -3,164 +3,187 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Crypto Empire | إمبراطورية الكريبتو</title>
+    <title>Crypto Empire | War Map</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;900&family=Tajawal:wght@400;700&display=swap" rel="stylesheet">
     <style>
         :root {
             --neon-green: #00ff88;
             --neon-red: #ff3e3e;
             --neon-blue: #00d4ff;
-            --dark-bg: #050505;
+            --dark-bg: #020202;
         }
 
         body, html {
             margin: 0; padding: 0;
             background-color: var(--dark-bg);
-            color: white;
-            font-family: 'Tajawal', sans-serif;
+            color: white; font-family: 'Tajawal', sans-serif;
             height: 100%; overflow: hidden;
         }
 
-        .app-container {
+        /* حاوية الخريطة - قابلة للسحب */
+        #map-container {
+            width: 100vw; height: 100vh;
+            cursor: grab; overflow: hidden;
+            position: relative;
+            background: 
+                linear-gradient(90deg, rgba(0,212,255,0.05) 1px, transparent 1px),
+                linear-gradient(rgba(0,212,255,0.05) 1px, transparent 1px);
+            background-size: 50px 50px; /* شبكة النيون */
+        }
+
+        #world {
+            width: 2000px; height: 2000px; /* مساحة الخريطة الكبيرة */
+            position: absolute; top: 0; left: 0;
+            transition: transform 0.1s ease-out;
+        }
+
+        /* تصميم الأبراج */
+        .tower {
+            position: absolute;
+            width: 60px; height: 120px;
+            background: linear-gradient(to top, var(--neon-blue), transparent);
+            border: 1px solid var(--neon-blue);
+            box-shadow: 0 0 20px var(--neon-blue);
             display: flex; flex-direction: column;
-            height: 100vh; padding: 15px; box-sizing: border-box;
+            justify-content: flex-end; align-items: center;
+            border-radius: 5px 5px 0 0;
+        }
+
+        .tower-label {
+            position: absolute; top: -30px;
+            font-family: 'Orbitron', sans-serif; font-size: 0.8rem;
+            color: white; text-shadow: 0 0 5px var(--neon-blue);
+        }
+
+        /* الرادار الصغير */
+        #radar {
+            position: fixed; top: 80px; right: 20px;
+            width: 100px; height: 100px;
+            border-radius: 50%; border: 1px solid var(--neon-green);
+            background: rgba(0, 255, 136, 0.1);
+            z-index: 1000;
+        }
+
+        #radar::after {
+            content: ''; position: absolute; width: 100%; height: 2px;
+            background: var(--neon-green); top: 50%;
+            animation: radar-sweep 2s linear infinite;
+        }
+
+        @keyframes radar-sweep { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
+
+        /* شريط العملات الثابت */
+        .ticker-wrap {
+            position: fixed; bottom: 0; left: 0; width: 100%;
+            background: rgba(0, 0, 0, 0.9); border-top: 1px solid #222;
+            padding: 10px 0; z-index: 2000;
         }
 
         header {
+            position: fixed; top: 0; width: 100%; z-index: 2000;
             display: flex; justify-content: space-between; align-items: center;
-            border-bottom: 2px solid var(--neon-blue);
-            padding: 10px; box-shadow: 0 0 15px var(--neon-blue);
-            z-index: 10;
-        }
-
-        .logo {
-            font-family: 'Orbitron', sans-serif; font-size: 1.2rem;
-            color: var(--neon-blue); text-shadow: 0 0 10px var(--neon-blue);
+            background: rgba(0,0,0,0.8); padding: 10px 20px; box-sizing: border-box;
+            border-bottom: 1px solid var(--neon-blue);
         }
 
         .lang-switch button {
-            background: rgba(0, 255, 136, 0.1); border: 1px solid var(--neon-green);
-            color: var(--neon-green); padding: 5px 12px; cursor: pointer;
-            border-radius: 5px; font-weight: bold; font-size: 0.8rem;
-        }
-
-        .game-world {
-            flex-grow: 1; display: flex; justify-content: center; align-items: center;
-            text-align: center; margin: 20px 0; border: 1px solid #1a1a1a;
-            border-radius: 20px; background: radial-gradient(circle, #0a0a0a 0%, #000 100%);
-            box-shadow: inset 0 0 30px #000;
-        }
-
-        .hero-text h1 {
-            font-size: 2.2rem; margin-bottom: 10px;
-            text-shadow: 0 0 15px var(--neon-green);
-        }
-
-        .main-btn {
-            background: var(--neon-green); color: black; border: none;
-            padding: 15px 35px; font-size: 1.1rem; font-weight: bold;
-            border-radius: 50px; box-shadow: 0 0 20px var(--neon-green);
-            cursor: pointer; margin-top: 15px;
-        }
-
-        /* --- تعديل شريط الأسعار ليناسب التصميم الجوال --- */
-        .ticker-wrap {
-            position: fixed; bottom: 0; left: 0; width: 100%;
-            background: rgba(0, 0, 0, 0.9);
-            border-top: 1px solid #222; padding: 12px 0;
-            z-index: 100; backdrop-filter: blur(5px);
-        }
-
-        .ticker {
-            display: flex; white-space: nowrap;
-            animation: marquee 20s linear infinite;
-        }
-
-        .ticker-item {
-            display: inline-flex; align-items: center;
-            margin: 0 25px; font-family: 'Orbitron', sans-serif;
-            font-size: 0.9rem; font-weight: bold; letter-spacing: 1px;
-        }
-
-        @keyframes marquee {
-            0% { transform: translateX(100%); }
-            100% { transform: translateX(-100%); }
-        }
-
-        @media (max-width: 600px) {
-            .hero-text h1 { font-size: 1.6rem; }
-            .logo { font-size: 0.9rem; }
+            background: transparent; border: 1px solid var(--neon-green);
+            color: var(--neon-green); padding: 5px 10px; border-radius: 5px; cursor: pointer;
         }
     </style>
 </head>
 <body>
 
-    <div class="app-container">
-        <header>
-            <div class="logo" id="logoText">CRYPTO EMPIRE</div>
-            <div class="lang-switch">
-                <button onclick="toggleLang()">EN / عربي</button>
-            </div>
-        </header>
+    <header>
+        <div style="font-family:'Orbitron'; color:var(--neon-blue); text-shadow: 0 0 10px var(--neon-blue);">CRYPTO EMPIRE</div>
+        <div class="lang-switch"><button onclick="toggleLang()">AR / EN</button></div>
+    </header>
 
-        <main class="game-world">
-            <div class="hero-text">
-                <h1 id="mainTitle">ابنِ إمبراطوريتك الرقمية</h1>
-                <p id="subTitle" style="color: #666; font-size: 0.9rem;">حوّل تحركات السوق إلى قوة وسيطرة</p>
-                <button class="main-btn" id="startBtn">ابدأ الغزو الآن</button>
-            </div>
-        </main>
+    <div id="radar"></div>
 
-        <div class="ticker-wrap">
-            <div class="ticker" id="ticker-box">
-                <span class="ticker-item" id="BTC-val" style="color: var(--neon-blue);">BTC: $...</span>
-                <span class="ticker-item" id="ETH-val" style="color: var(--neon-blue);">ETH: $...</span>
-                <span class="ticker-item" id="SOL-val" style="color: var(--neon-blue);">SOL: $...</span>
-                <span class="ticker-item" id="BNB-val" style="color: var(--neon-blue);">BNB: $...</span>
+    <div id="map-container">
+        <div id="world">
+            <div class="tower" style="top: 1000px; left: 1000px;" id="tower-BTC">
+                <div class="tower-label">BITCOIN</div>
+            </div>
+            <div class="tower" style="top: 800px; left: 1200px;" id="tower-ETH">
+                <div class="tower-label">ETHEREUM</div>
+            </div>
+            <div class="tower" style="top: 1100px; left: 850px;" id="tower-SOL">
+                <div class="tower-label">SOLANA</div>
             </div>
         </div>
     </div>
 
+    <div class="ticker-wrap">
+        <marquee scrollamount="5" direction="right" id="ticker-text" style="font-family:'Orbitron'; color:var(--neon-green);">
+            BTC: $... | ETH: $... | SOL: $... | BNB: $...
+        </marquee>
+    </div>
+
     <script>
-        // نظام اللغة
-        let currentLang = 'ar';
-        const content = {
-            ar: { title: "ابنِ إمبراطوريتك الرقمية", sub: "حوّل تحركات السوق إلى قوة وسيطرة", btn: "ابدأ الغزو الآن", dir: "rtl" },
-            en: { title: "Build Your Crypto Empire", sub: "Turn market moves into power", btn: "Start Conquest", dir: "ltr" }
-        };
+        // نظام تحريك الخريطة (Drag to Scroll)
+        const container = document.getElementById('map-container');
+        const world = document.getElementById('world');
+        let isDragging = false;
+        let startX, startY, scrollLeft, scrollTop;
 
-        function toggleLang() {
-            currentLang = (currentLang === 'ar') ? 'en' : 'ar';
-            document.documentElement.dir = content[currentLang].dir;
-            document.getElementById('mainTitle').innerText = content[currentLang].title;
-            document.getElementById('subTitle').innerText = content[currentLang].sub;
-            document.getElementById('startBtn').innerText = content[currentLang].btn;
-        }
+        container.addEventListener('mousedown', (e) => {
+            isDragging = true;
+            startX = e.pageX - world.offsetLeft;
+            startY = e.pageY - world.offsetTop;
+            container.style.cursor = 'grabbing';
+        });
 
-        // --- الربط المباشر والآمن بالأسعار ---
-        function startPrices() {
-            const streams = ['btcusdt', 'ethusdt', 'solusdt', 'bnbusdt'];
-            const socket = new WebSocket(`wss://stream.binance.com:9443/ws/${streams.map(s => s + '@ticker').join('/')}`);
+        window.addEventListener('mouseup', () => {
+            isDragging = false;
+            container.style.cursor = 'grab';
+        });
 
+        window.addEventListener('mousemove', (e) => {
+            if (!isDragging) return;
+            e.preventDefault();
+            const x = e.pageX - startX;
+            const y = e.pageY - startY;
+            world.style.left = `${x}px`;
+            world.style.top = `${y}px`;
+        });
+
+        // دعم اللمس للجوال
+        container.addEventListener('touchstart', (e) => {
+            isDragging = true;
+            startX = e.touches[0].pageX - world.offsetLeft;
+            startY = e.touches[0].pageY - world.offsetTop;
+        });
+
+        window.addEventListener('touchmove', (e) => {
+            if (!isDragging) return;
+            const x = e.touches[0].pageX - startX;
+            const y = e.touches[0].pageY - startY;
+            world.style.left = `${x}px`;
+            world.style.top = `${y}px`;
+        });
+
+        // ربط الأسعار الحية لتغيير حجم الأبراج
+        function updatePrices() {
+            const socket = new WebSocket('wss://stream.binance.com:9443/ws/btcusdt@ticker/ethusdt@ticker/solusdt@ticker');
             socket.onmessage = (event) => {
                 const data = JSON.parse(event.data);
                 const coin = data.s.replace('USDT', '');
-                const price = parseFloat(data.c).toLocaleString(undefined, {minimumFractionDigits: 2});
-                const change = parseFloat(data.P).toFixed(2);
+                const change = parseFloat(data.P);
+                const tower = document.getElementById(`tower-${coin}`);
                 
-                const el = document.getElementById(`${coin}-val`);
-                if (el) {
-                    const color = change >= 0 ? 'var(--neon-green)' : 'var(--neon-red)';
-                    const icon = change >= 0 ? '▲' : '▼';
-                    el.style.color = color;
-                    el.innerHTML = `${coin}: $${price} <span style="font-size: 0.7rem; margin-left:5px;">${icon} ${change}%</span>`;
+                if (tower) {
+                    // إذا كان السعر صاعد، البرج يطول ويتوهج أكثر
+                    const height = 120 + (change * 2);
+                    tower.style.height = `${height}px`;
+                    tower.style.boxShadow = `0 0 ${20 + change}px ${change >= 0 ? 'var(--neon-green)' : 'var(--neon-red)'}`;
+                    tower.style.background = `linear-gradient(to top, ${change >= 0 ? 'var(--neon-green)' : 'var(--neon-red)'}, transparent)`;
                 }
             };
-
-            socket.onclose = () => setTimeout(startPrices, 3000); // إعادة اتصال تلقائي في حال الانقطاع
         }
 
-        startPrices();
+        updatePrices();
     </script>
 </body>
 </html>
